--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -142,16 +142,12 @@
             android:id="@+id/FoodImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="75dp"
-            android:scaleType="centerCrop" />
+            android:layout_marginBottom="75dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="75dp"
-            android:layout_gravity="bottom"
-            android:gravity="center|left"
-            android:orientation="vertical"
-            android:paddingLeft="20dp">
+            android:layout_gravity="bottom">
 
             <TextView
                 android:id="@+id/Location"
