deleting dark mode button in settings.xml

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -89,7 +89,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="64dp"
         android:ems="10"
         android:text="Application Settings"
         android:textSize="16sp"
@@ -97,35 +96,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changePhoneNumberText" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/toggleDarkMode"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="32dp"-->
-<!--        android:layout_marginLeft="16dp"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:layout_marginBottom="64dp"-->
-<!--        android:ems="10"-->
-<!--        android:text="Dark Mode"-->
-<!--        android:textSize="24sp"-->
-<!--        android:textStyle="bold"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/applicationHeader" />-->
-
     <TextView
         android:id="@+id/changeNotifications"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginTop="72dp"
         android:ems="10"
         android:text="Sounds &amp; Notifications"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toggleDarkMode" />
+        app:layout_constraintTop_toBottomOf="@+id/applicationHeader" />
 
     <TextView
         android:id="@+id/resetMatches"
