--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -22,7 +22,7 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="36dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
@@ -44,12 +44,13 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="40dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginRight="56dp"
-        android:text="Find Meal"
+        android:text="Map"
+        android:onClick="toMap"
         android:textColor="#fff"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -63,10 +64,10 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="20dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginEnd="36dp"
         android:layout_marginRight="56dp"
         android:text="Friends"
         android:textColor="#fff"
