Reset matches by deleting from real time database

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -119,6 +119,7 @@
         android:layout_marginLeft="32dp"
         android:ems="10"
         android:text="Reset Matches"
+        android:onClick="resetMatches"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button_sign_out"
