--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -70,6 +70,7 @@
         android:layout_marginEnd="36dp"
         android:layout_marginRight="56dp"
         android:text="Friends"
+        android:onClick="toFriends"
         android:textColor="#fff"
         android:textSize="24sp"
         android:textStyle="bold"
