Accepting friend requests

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,7 @@
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/email"
+        android:id="@+id/emailDisplay"
         android:layout_width="290dp"
         android:layout_height="110dp"
         android:text="Email"
